<resources>
    <string name="app_name">MoodTunes</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="moodInputHint">Type or speak how you feel…</string>
    <string name="emotion_detection">Emotion Detection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="filter_playlists">Filter playlists</string>
    <string name="filter_icon">Filter icon</string>
    <string name="mood">Mood:</string>
    <string name="genre">Genre:</string>
    <string name="favorites">Favorites</string>
    <string name="filter_history">Filter history</string>
</resources>